--- a/FESlinkTree/index.html
+++ b/FESlinkTree/index.html
@@ -7,6 +7,8 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link rel='stylesheet' href="style/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500&family=Raleway:wght@100;200;300;400;500&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="wrap">
@@ -23,6 +25,7 @@
         </div>
         <button class="custom-btn btn-8"><a href="https://instagram.com/futurosenstem?igshid=MzRlODBiNWFlZA==" target="_blank"><span><i class="fab fa-instagram"></i> Instagram</span></a></button>
         <button class="custom-btn btn-8"><a href="https://www.linkedin.com/company/futuros-en-stem/" target="_blank"><span><i class="fab fa-linkedin-in"></i> Linkedin</span></a></button>
+        <button class="custom-btn btn-8"><a href="https://uncw.campuslabs.com/engage/organization/futurosenstem" target="_blank"><span>WaveLink</span></a></button>
 <!--        <button class="custom-btn btn-8"><span><a href="https://linkeden.com/code_abbas" target="_blank"><i class="fas fa-linkedin"></i> My Website</a></span></button>-->
         <!---->
 
