insta link only for iphone

--- a/FESlinkTree/index.html
+++ b/FESlinkTree/index.html
@@ -23,7 +23,7 @@
 <!--          <span class="profile_name">FES</span>-->
           <span class="at">@FuturosEnStem</span>
         </div>
-        <button class="custom-btn btn-8"><a href="https://instagram.com/futurosenstem?igshid=MzRlODBiNWFlZA==" target="_blank"><span><i class="fab fa-instagram"></i> Instagram</span></a></button>
+        <button class="custom-btn btn-8"><a href="instagram://user?username=futurosenstem&igshid=NzZlODBkYWE4Ng==" target="_blank"><span><i class="fab fa-instagram"></i> Instagram</span></a></button>
         <button class="custom-btn btn-8"><a href="https://www.linkedin.com/company/futuros-en-stem/" target="_blank"><span><i class="fab fa-linkedin-in"></i> Linkedin</span></a></button>
         <button class="custom-btn btn-8"><a href="https://uncw.campuslabs.com/engage/organization/futurosenstem" target="_blank"><span>WaveLink</span></a></button>
 <!--        <button class="custom-btn btn-8"><span><a href="https://linkeden.com/code_abbas" target="_blank"><i class="fas fa-linkedin"></i> My Website</a></span></button>-->
